<resources>
    <string name="app_name">NavDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="micButton">micButton</string>
    <string name="editText">editText</string>
    <string name="textview">TextView</string>
    <string name="button1">Enter</string>
    <string name="button2"> </string>
    <!--    <string name="button1">Go to the park</string>-->
    <!--    <string name="button2">Go to the restaurant</string>-->
    <string name="talk_background">talk_background</string>
    <string name="TextView1">Where do you want to go?</string>
    <string name="TextView2"> </string>
    <string name="editText2" >.</string>
    <string name="name">請輸入姓名</string>
    <string name="submit">Submit</string>
    <string name="bot_num">bot_num</string>
    <string name="btn_setting">btn_setting</string>
    <!--    <string name="spinner">a</string>-->
    <string-array name="spinner1">
        <item>請選擇項目</item>
        <item>溝壩國小</item>
<!--        <item>斗南國小</item>-->
    </string-array>
    <string-array name="spinner2">
        <item>請選擇項目</item>
        <item>一年級</item>
        <item>二年級</item>
        <item>三年級</item>
        <item>四年級</item>
        <item>五年級</item>
        <item>六年級</item>
    </string-array>
    <string-array name="spinner3">
        <item>請選擇項目</item>
        <item>甲</item>
        <item>乙</item>
        <item>丙</item>
        <item>丁</item>
        <item>戊</item>
        <item>己</item>
    </string-array>
</resources>